<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#33000000" >

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_white_shape_top"
            android:text="@string/btn_save_to_photo"
            android:textColor="#0679c2"
            android:textSize="@dimen/text_size_18" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#ebebeb" />

        <Button
            android:id="@+id/btn_decode"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_white"
            android:text="@string/btn_decode_qrcode"
            android:textColor="#0679c2"
            android:visibility="gone"
            android:textSize="@dimen/text_size_18" />

        <View
            android:id="@+id/line_decode"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:visibility="gone"
            android:background="#ebebeb" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_white_shape_bottom"
            android:text="@string/btn_cancel"
            android:textColor="#0679c2"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</RelativeLayout>